# bills-manage

backend/: .env.local  .gitignore  init_db.py  init_permissions.py  main.py  print_db_info.py  pyproject.toml
backend/app/: __init__.py  config.py  database.py
backend/app/models/: __init__.py  base.py  bill.py  billing_record.py  enum.py  file_upload.py  invitation.py  invitation_use.py  notification.py  notification_types.py  permission.py  recharge_record.py  token_usage_record.py  user.py  user_account.py  user_permission.py  workspace.py  workspace_invitation.py  workspace_member.py
backend/app/routes/: __init__.py  account.py  auth.py  bill.py  file.py  invitation.py  workspace.py
backend/app/services/: __init__.py  account_service.py  auth_service.py  bill_service.py  billing_service.py  file_service.py  invitation_service.py  workspace_service.py
backend/app/utils/: __init__.py  billing_checker.py  decorators.py  deepseek_decorator.py  deepseek_util.py  file_utils.py  jwt_util.py  logger.py  permission_checker.py  trace_util.py
backend/app/utils/parse/: __init__.py  excel.py  image.py  pdf.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  global.css  global.less  typings.d.ts
frontend/src/Layout/: index.module.less  index.tsx
frontend/src/api/: account.ts  bill.ts  client.ts  invitation.ts  upload.ts  workspace.ts
frontend/src/auth/: AuthProvider.tsx  ProtectedRoute.tsx  authService.ts  authService.tsx  useAuth.tsx
frontend/src/common/: const.ts
frontend/src/router/: index.tsx
(+69 files in other folders)
