[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "flask>=3.1.2",
  "flask-cors>=6.0.2",
  "langchain>=1.2.0",
  "langchain-community>=0.4.1",
  "lxml>=6.0.2",
  "nanoid>=2.0.0",
  "openai>=2.14.0",
  "pillow>=12.0.0",
  "pyjwt>=2.10.1",
  "pypdf>=6.5.0",
  "pytesseract>=0.3.13",
  "python-dotenv>=1.2.1",
  "qrcode>=8.2",
  "requests>=2.32.5",
  "sqlalchemy>=2.0.45",
]
